<resources>
    <string name="app_name">T-T Movies &amp; Series</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="none">none</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="close_popup_window_title">What do you want to do?</string>
    <string name="close_the_app_text">Close the app</string>
    <string name="logout_popup_window_title">Do you want to logout?</string>
    <string name="logout_from_the_app_text">Logout</string>
    <string name="activate_your_account">Activate your account</string>

    <string name="bullet">\u2022</string>

    <string name="my_watchlist">My watchlist</string>

    <string name="notifications_are_on">Notifications are on</string>
    <string name="notifications_are_off">Notifications are off</string>
    <string name="sync_watchlist_is_on">Watchlist sync is on</string>
    <string name="sync_watchlist_is_off">Watchlist sync is off</string>

    <string name="welcome_user">Welcome {USERNAME}</string>

    <string name="movies">Movies</string>
    <string name="popular_movies">Popular movies</string>
    <string name="playing_now_movies">Playing now movies</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="tv">TV</string>
    <string name="popular_tv_shows">Popular TV shows</string>
    <string name="top_rated_tv_shows">Top rated TV shows</string>
    <string name="on_the_air_tv_shows">On the air TV shows</string>
    <string name="airing_today_tv_shows">Airing today TV shows</string>
    <string name="communicate">Communicate</string>
    <string name="send_message">Send message</string>
    <string name="submit_question">Submit a question</string>
    <string name="your_name">Your name (Optional)</string>
    <string name="your_message">Your message</string>
    <string name="biography_label">Biography</string>
    <string name="search_a_title">Search a title</string>
    <string name="trending">Trending</string>
    <string name="episode_name">{NUMBER}. {TITLE}</string>

    <string name="message_success">Message submitted successful.</string>
    <string name="message_fail">Message submitted unsuccessful. Please try again</string>
    <string name="mail_error">Not a valid email</string>
    <string name="message_short">Too short message. Write at least 10 chars</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="submit_email">Enter your email</string>
    <string name="your_email">Your email</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="skip">Skip this step</string>

    <string name="error_for_data">An error occurred while loading Data.</string>
    <string name="no_internet">It looks like you\'re offline. Please check your internet connection.</string>

    <string name="reviews"><u>Reviews</u></string>
    <string name="summary">Summary</string>
    <string name="directors">Directors</string>
    <string name="budget">Budget</string>
    <string name="box_office">Box Office</string>
    <string name="actors">Actors</string>
    <string name="videos">Videos</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="recommendations">Recommendations</string>
    <string name="no_watchlist_items">You have no items in your watchlist.</string>

    <string name="tv_show">TV Show</string>
    <string name="similar_tv_shows">Similar Tv Shows</string>
    <string name="reviews_number">({REVIEWS_NUMBER})</string>

    <string name="hour_format">{hour}h\u0020</string>
    <string name="minutes_format">{min}min</string>
    <string name="percent_number_up">+{PERCENT_VALUE}%</string>
    <string name="percent_number_down">{PERCENT_VALUE}%</string>
    <string name="multi_directors">{dir1} and {dir2}</string>
    <string name="movie_rate">({MOVIE_RATE})</string>

    <string name="known_for">Known for {x}</string>
    <string name="person_single_born">Born: {DATE} (age {AGE})</string>
    <string name="person_born">Born: {DATE}</string>
    <string name="person_death">Died: {DEATH_DATE} ({AGE})</string>
    <string name="filmography">Filmography</string>

    <string name="tv_show_release_date_format1">{year} -</string>
    <string name="tv_show_release_date_format2">{year1} - {year2}</string>
    <string name="one_season_text">1 season</string>
    <string name="season_number">{x} seasons</string>

    <string name="gender_male">Gender: Male</string>
    <string name="gender_female">Gender: Female</string>
    <string name="gender_no">Gender: Not specified</string>
    <string name="production_companies">Production Companies</string>
    <string name="biography">Biography</string>
    <string name="app_description">Explore movies and tv series. Find details for any movie and tv show.</string>
    <string name="settings">Settings</string>

</resources>