<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        app:srcCompat="@drawable/video_camera_white"
        android:contentDescription="@string/none" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="#ffffff"
        android:textColorHint="#8effffff"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="#ffffff"
        android:textColorHint="#8effffff"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_password_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="#ffffff"
        android:textColorHint="#8effffff"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bubble"
        android:fontFamily="@font/montserrat_bold"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_skip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="54dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/bubble"
        android:fontFamily="@font/montserrat_regular"
        android:padding="12dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>