<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/video_camera_white"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:textColorHint="#8effffff"
        android:paddingEnd="32dp"
        android:background="@drawable/bubble"
        android:inputType="textEmailAddress"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:hint="@string/email"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingEnd="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bubble"
        android:inputType="textPassword"
        android:textColorHint="#8effffff"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:hint="@string/password"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:id="@+id/forgot_password"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#ffffff" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/bubble"
        android:fontFamily="@font/montserrat_bold"
        android:padding="12dp"
        android:text="@string/login"/>
</LinearLayout>