<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar_menu_gradient"
    android:orientation="vertical"
    tools:context=".view.search.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#616161"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:contentDescription="@string/none"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_search" />

        <EditText
            android:id="@+id/search_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="8.5"
            android:autofillHints=""
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/search_a_title"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/trending_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/trending"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp" />

</LinearLayout>