<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar_menu_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/nav_header_desc"
                android:src="@drawable/video_camera_white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="Explore movies and tv series. Find details for any movie and tv show." />

            <LinearLayout
                android:id="@+id/nav_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login" />

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/nav_activate_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/activate_your_account"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="gone"
                tools:visibility="visible"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/nav_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/movies_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:rotation="90"
                android:src="@drawable/expand_list_arrow" />

        </RelativeLayout>

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayoutMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ael_duration="500"
            app:ael_expanded="true"
            app:ael_interpolator="bounce">

            <TextView
                android:id="@+id/nav_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/popular_movies"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/nav_playing_now_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_popular_movies"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/playing_now_movies"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/nav_top_rated_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_playing_now_movies"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/top_rated_movies"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/nav_upcoming_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_top_rated_movies"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/upcoming_movies"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <RelativeLayout
            android:id="@+id/nav_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/tv"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/tv_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:rotation="90"
                android:src="@drawable/expand_list_arrow" />

        </RelativeLayout>

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayoutTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ael_duration="500"
            app:ael_expanded="true"
            app:ael_interpolator="bounce">

            <TextView
                android:id="@+id/nav_popular_tv_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/popular_tv_shows"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/nav_top_rated_tv_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_popular_tv_shows"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/top_rated_tv_shows"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/nav_on_air_tv_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_top_rated_tv_shows"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/on_the_air_tv_shows"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/nav_airing_today_tv_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_on_air_tv_shows"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/airing_today_tv_shows"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/nav_communicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/communicate"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/communication_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:rotation="90"
                android:src="@drawable/expand_list_arrow" />

        </RelativeLayout>

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayoutCommunicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ael_duration="500"
            app:ael_expanded="true"
            app:ael_interpolator="bounce">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nav_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/send_message"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:rotation="315"
                    android:src="@drawable/send" />

            </RelativeLayout>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <RelativeLayout
            android:id="@+id/nav_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="Settings"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/settings_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:rotation="90"
                android:src="@drawable/expand_list_arrow" />

        </RelativeLayout>

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ael_duration="500"
            app:ael_expanded="true"
            app:ael_interpolator="bounce">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/nav_sync_watchlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat_light"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/nav_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat_light"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <TextView
            android:id="@+id/nav_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="My Watch list"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/nav_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/logout_from_the_app_text"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

</ScrollView>